--- a/views/list_of_bookmarks.erb
+++ b/views/list_of_bookmarks.erb
@@ -1,2 +1,7 @@
 <h1> Bookmarks </h1>
+<form action='/url' method='post'>
+    <label for="url"> Add bookmark </label>
+    <input type="text" name="url">
+    <input type="submit" value="Submit">
+</form>
 <h1> <%= @bookmark %> </h1>
