added title with urls

--- a/views/list_of_bookmarks.erb
+++ b/views/list_of_bookmarks.erb
@@ -2,6 +2,8 @@
 <form action='/url' method='post'>
     <label for="url"> Add bookmark </label>
     <input type="text" name="url">
+    <label for="title"> Add bookmark title </label>
+    <input type="text" name="title">
     <input type="submit" value="Submit">
 </form>
 <h1> <%= @bookmark %> </h1>
